US-0000853: Fix issue where Gift Option would show when not a gift

--- a/aura/trac_OrderLineItem/trac_OrderLineItem.cmp
+++ b/aura/trac_OrderLineItem/trac_OrderLineItem.cmp
@@ -436,10 +436,11 @@
                                         order="{!v.order}"
                                         orderLineItem="{!v.orderLineItem}"/>
                             </lightning:tab>
-                            <lightning:tab label="Gift Options" id="gift">
-
-                                <c:trac_OrderLineItemGift orderLineItem="{!v.orderLineItem}" order="{!v.order}"/>
-                            </lightning:tab>
+                            <aura:if isTrue="{!v.orderLineItem.GiftFlag == 'Y'}">
+                                <lightning:tab label="Gift Options" id="gift">
+                                    <c:trac_OrderLineItemGift orderLineItem="{!v.orderLineItem}" order="{!v.order}"/>
+                                </lightning:tab>
+                            </aura:if>
                             <lightning:tab label="Instructions" iconName="{!not(empty(v.orderLineItem.Instructions.Instruction)) ? 'utility:task' : ''}" id="instructions">
                                 <c:trac_OrderLineItemInstructions orderLineItem="{!v.orderLineItem}"/>
                             </lightning:tab>
