--- a/aura/trac_IssueAppeasement/trac_IssueAppeasement.cmp
+++ b/aura/trac_IssueAppeasement/trac_IssueAppeasement.cmp
@@ -40,10 +40,10 @@
                     <lightning:card
                             class="profile-warning slds-align--absolute-center slds-p-horizontal--medium slds-p-vertical--small slds-m-bottom--medium"
                             iconName="utility:warning">
-                        Your profile {!v.profileName} is limited to issuing appeasements of
-                        <lightning:formattedNumber value="{!v.maxAppeasement}"/> points or less.
-                        If you need to issue a larger appeasement, please escalate the case and write a description
-                        of the amount requested and why in the case feed.
+                            Your profile {!v.profileName} is limited to issuing appeasements of
+                            <lightning:formattedNumber value="{!v.maxAppeasement}"/> points or less.
+                            If you need to issue a larger appeasement, please escalate the case and write a description
+                            of the amount requested and why in the case feed.
                     </lightning:card>
                 </aura:if>
                 <div>
@@ -61,7 +61,7 @@
                 </div>
                 <p class="{!(and(v.appeasePoints != null, v.appeasePoints > 0) ? 'slds-show' : 'slds-hide') + ' slds-m-top--large'}">
                     The customer will be awarded <lightning:formattedNumber value="{!v.appeasePoints}" maximumFractionDigits="0"/> points,
-                    worth <lightning:formattedNumber style="currency" value="{!v.appeaseValue}"/> CAD
+                    worth $<lightning:formattedNumber style="decimal" minimumFractionDigits="2" maximumFractionDigits="2" value="{!v.appeaseValue}"/> CAD
                     at time of redemption.  Their new point balance will be <lightning:formattedNumber value="{!v.finalPointBalance}" maximumFractionDigits="0"/>
                     points. An email confirmation will be sent regarding this.
                 </p>
