--- a/aura/trac_Loyalty/trac_Loyalty.cmp
+++ b/aura/trac_Loyalty/trac_Loyalty.cmp
@@ -16,9 +16,7 @@
     <aura:attribute type="String"  name="bodyMsg"  default=""/>
     <aura:attribute type="Boolean" name="isMerkleError"   default="false"/>
     <aura:attribute type="Boolean" name="canRetry"   default="false"/>
-
     <aura:handler name="trac_MerkleErrorEvent" event="c:trac_MerkleErrorEvent" action="{!c.handleMerkleErrorEvent}"/>
-
     <c:trac_MerkleErrorComponent canRetry="{!v.canRetry}" reattempt="{!c.handleSaveChanges}" isMerkleError="{!v.isMerkleError}" bodyMsg="{!v.bodyMsg}" responseCode="{!v.responseCode}"/>
     <lightning:overlayLibrary aura:id="overlayLib"/>
     <lightning:layout multipleRows="true">
@@ -147,11 +145,9 @@
                 </aura:if>
             </div>
         </lightning:layoutItem>
-
         <lightning:layoutItem class="slds-p-around_xx-small"  size="6">
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Credit</p>
-
                 <aura:if isTrue="{!not(empty(v.loyalty.card_details))}">
                     <div>
                         <ul class="slds-list_horizontal slds-has-dividers_right">
@@ -164,16 +160,14 @@
                         <p>N/A</p>
                     </aura:set>
                 </aura:if>
-
             </div>
         </lightning:layoutItem>
         <lightning:layoutItem class="slds-p-around_xx-small" size="6">
-
             <div class="header-column">
                 <p class="field-title slds-form-element__label slds-no-flex">Points Available for Redemption</p>
                 <aura:if isTrue="{!not(empty(v.loyalty.balance))}">
                     <p><lightning:formattedNumber value="{!v.loyalty.balance}"/>
-                        (<lightning:formattedNumber value="{!v.loyalty.balance_in_dollars}" style="currency" currencyCode="CAD" currencyDisplayAs="symbol"/>)
+                        ($<lightning:formattedNumber value="{!v.loyalty.balance_in_dollars}" style="decimal" minimumFractionDigits="2" maximumFractionDigits="2"/>)
                         </p>
                     <aura:set attribute="else">
                         <p>N/A</p>
@@ -193,22 +187,26 @@
             </div>
         </lightning:layoutItem>
     </lightning:layout>
+
     <aura:if isTrue="{!not(empty(v.loyalty.customer_badges))}">
-        <lightning:layout >
-            <lightning:layoutItem class="slds-p-around_xx-small">
-                <div class="header-column">
-                    <p class="field-title slds-form-element__label slds-no-flex">Badges</p>
-                    <div>
-                        <ul class="slds-list_horizontal slds-has-dividers_right">
-                            <aura:iteration items="{!v.loyalty.customer_badges}" var="badge">
-                                <li class="slds-item"><lightning:badge label="{!badge.display_name}"/></li>
-                            </aura:iteration>
-                        </ul>
-                    </div>
+
+    <lightning:layout >
+        <lightning:layoutItem class="slds-p-around_xx-small">
+            <div class="header-column">
+                <p class="field-title slds-form-element__label slds-no-flex">Badges</p>
+                <div>
+                    <ul class="slds-list_horizontal slds-has-dividers_right">
+                        <aura:iteration items="{!v.loyalty.customer_badges}" var="badge">
+                            <li class="slds-item"><lightning:badge label="{!badge.display_name}"/></li>
+                        </aura:iteration>
+                    </ul>
                 </div>
-            </lightning:layoutItem>
-        </lightning:layout>
+            </div>
+        </lightning:layoutItem>
+    </lightning:layout>
+
     </aura:if>
+
     <lightning:layout>
         <aura:if isTrue="{!v.isEditable}">
             <lightning:layout>
@@ -227,11 +225,11 @@
                         <p class="field-title slds-form-element__label slds-no-flex">Current Year Spend</p>
                         <aura:if isTrue="{!not(empty(v.loyalty.member_attributes.ytd_spend))}">
                             <p>
-                                <lightning:formattedNumber
+                                $<lightning:formattedNumber
                                         value="{!v.loyalty.member_attributes.ytd_spend}"
-                                        style="currency"
-                                        currencyCode="CAD"
-                                        currencyDisplayAs="symbol"/>
+                                        style="decimal"
+                                        minimumFractionDigits="2"
+                                        maximumFractionDigits="2"/>
                             </p>
                             <aura:set attribute="else">
                                 <p>N/A</p>
@@ -277,7 +275,7 @@
                     <div class="header-column">
                         <p class="field-title slds-form-element__label slds-no-flex">Spend To Qualify for Next Tier</p>
                         <aura:if isTrue="{!not(empty(v.loyalty.actions_needed_for_next_tier))}">
-                            <p><lightning:formattedNumber value="{!v.loyalty.actions_needed_for_next_tier}" style="currency" currencyCode="CAD" currencyDisplayAs="symbol"/></p>
+                            <p>$<lightning:formattedNumber value="{!v.loyalty.actions_needed_for_next_tier}" style="decimal" minimumFractionDigits="2" maximumFractionDigits="2"/></p>
                             <aura:set attribute="else">
                                 <p>N/A</p>
                             </aura:set>
@@ -289,7 +287,7 @@
                         <p class="field-title slds-form-element__label slds-no-flex">Lifetime Points Earned</p>
                         <aura:if isTrue="{!not(empty(v.loyalty.lifetime_balance))}">
                             <p><lightning:formattedNumber value="{!v.loyalty.lifetime_balance}"/>
-                                &nbsp;(<lightning:formattedNumber value="{!v.loyalty.lifetime_balance_in_dollars}" style="currency" currencyCode="CAD" currencyDisplayAs="symbol"/>)</p>
+                                &nbsp;($<lightning:formattedNumber value="{!v.loyalty.lifetime_balance_in_dollars}" style="decimal" minimumFractionDigits="2" maximumFractionDigits="2"/>)</p>
                             <aura:set attribute="else">
                                 <p>N/A</p>
                             </aura:set>
@@ -298,8 +296,6 @@
                 </lightning:layoutItem>
                 <lightning:layoutItem class="slds-p-around_xx-small" size="6">
                     <div class="header-column">
-
-
                         <p class="field-title slds-form-element__label slds-no-flex">Last Year's Tier</p>
                         <aura:if isTrue="{!not(empty(v.loyalty.member_attributes.ly_tier))}">
                             <p>{!v.loyalty.member_attributes.ly_tier}</p>
@@ -337,11 +333,9 @@
             <c:trac_EscalateToLoyaltyTeam caseRecord="{!v.caseRecord}" />
         </lightning:layoutItem>
     </lightning:layout>
-
     <div aura:id="divBody">
         {!v.body}
     </div>
-
     <aura:if isTrue="{!v.showAppeasementModal}">
     <div aura:id="appeasementModal">
         <c:trac_IssueAppeasement loyalty="{!v.loyalty}" conversionRate="{!v.conversionRate}" caseRecord="{!v.caseRecord}"/>
