--- a/aura/trac_OrderLineItem/trac_OrderLineItem.css
+++ b/aura/trac_OrderLineItem/trac_OrderLineItem.css
@@ -2,11 +2,61 @@
  * Created by jhoran on 7/26/2019.
  */
 .THIS img {
-    height: 120px;
+    max-height:120px;
+    height: auto;
     width: auto;
 }
 
 .THIS .trac-img {
-    height: 108px;
+    height: auto;
     width: auto;
+}
+
+.THIS .slds-size_1-of-12 {
+    height: 12em;
+}
+.THIS .slds-size_1-of-11 {
+    height: 12em;
+}
+
+.THIS .slds-size_2-of-12 {
+    height: 12em;
+}
+
+.THIS .slds-size_1-of-8 {
+    height: 12em;
+}
+
+.THIS .slds-size_1-of-7 {
+    height: 12em;
+}
+
+.THIS .slds-size_1-of-6 {
+    height: 12em;
+}
+
+.THIS .slds-size_1-of-10 {
+    height: 12em;
+}
+
+.THIS .slds-size_1-of-5 {
+    height: 12em;
+}
+
+.THIS .slds-size_1-of-6 * {
+    transition-delay: 0s;
+}
+
+.THIS div.slds-form-element__icon {
+    padding-top: 0;
+}
+
+.THIS .item-description * {
+    font-weight: normal;
+}
+
+.THIS .slds-badge {
+    font-size: x-small;
+    font-weight: normal;
+    text-transform: uppercase;
 }
